Fix navbar spacing

--- a/css/navigation.css
+++ b/css/navigation.css
@@ -8,9 +8,8 @@
 	}
 
 .navbar {
-	border-bottom: none;
-	padding-bottom: 1.6rem;
-	margin-bottom: 0px;
+	border-bottom: none !important;
+	}
 	}
 
 .navbar-compact {
