--- a/css/structure.css
+++ b/css/structure.css
@@ -10,7 +10,7 @@
 	}
 
 body {
-	padding-top: 14rem;
+	padding-top: 135px;
 	}
 
 .page-header {
